# actix_svelte_template

./: .dockerignore  .env.example  .gitignore  .ignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  db.sqlite3  debug.sh  diesel.toml  nginx.conf  package-lock.json  package.json
client/: package-lock.json  package.json  svelte.config.js  vite.config.ts
client/src/routes/: Header.svelte
client/src/routes/about/: +page.svelte
client/src/routes/todos/: index.svelte
migrations/2022-04-24-002329_create_todos/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
