[package]
authors = ["Nelson Truran <nelson@truran.dev>"]
edition = "2018"
name = "actix_svelte_template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.0"
actix-web = "4"
actix-multipart = "*"
futures-util = "*"
dotenv = "0.15.0"
serde = { version = "*", features = ["derive"] }
uuid = { version = "*", features = ["v4", "fast-rng"] }
diesel = { version = "*", features = ["sqlite", "r2d2"] }
